--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "bai5",
+  "name": "bai6",
   "version": "1.0.0",
   "main": "index.js",
   "scripts": {
@@ -12,7 +12,11 @@
     "expo": "~54.0.33",
     "expo-status-bar": "~3.0.9",
     "react": "19.1.0",
-    "react-native": "0.81.5"
+    "react-dom": "19.1.0",
+    "react-native": "0.81.5",
+    "react-native-safe-area-context": "^5.6.2",
+    "react-native-web": "^0.21.0"
   },
   "private": true
 }
+
